@@ -1116,17 +1116,17 @@ lbl_exit:
 }
 
 
-int	DBadd_history_log(zbx_uint64_t itemid, char *value, int clock, int timestamp,char *source, int severity, char *encoding)
+int	DBadd_history_log(zbx_uint64_t id, zbx_uint64_t itemid, char *value, int clock, int timestamp,char *source, int severity, char *encoding)
 {
 	char		value_esc[MAX_STRING_LEN];
 	char		source_esc[MAX_STRING_LEN];
-	zbx_uint64_t	id;
 
 	zabbix_log(LOG_LEVEL_DEBUG,"In add_history_log()");
 
 	DBescape_string(value,value_esc,MAX_STRING_LEN);
 	DBescape_string(source,source_esc,MAX_STRING_LEN);
-	id = DBget_maxid("history_log", "id");
+	if(id == 0)
+		id = DBget_maxid("history_log", "id");
 
 	if(encoding!=NULL && (
 		strcmp(encoding,"sjis")==0 ||
