@@ -23,6 +23,8 @@ Changes for 1.4.j:
 
 Changes for 1.4.3:
 
+ - [DEV-42] Synchronisation of log files (Sasha)
+ - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)
  - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)
  - [ZBX-80] Master node does not display configuration of slave nodes (Sasha)
  - [ZBX-67] Under DM, Synchronizing binary data between nodes for PostgresSQL (Sasha)
